@@ -19,11 +19,8 @@ under the License.
 -->
 
 <project name="OFBiz Main Build" default="build" basedir=".">
-    <property name="site.dir" value="../site"/>
-    <property name="memory.initial.param" value="-Xms512M"/>
-    <property name="memory.max.param" value="-Xmx1024M"/>
-    <property name="permmemory.max.param" value="-XX:MaxPermSize=512M"/>
-    <property name="javadoc.maxmemory" value="1024M"/>
+	<property file="build.properties" />  
+	<property name="site.dir" value="../site"/>
 
     <available file="applications/build.xml" property="applications.present"/>
     <available file="specialpurpose/build.xml" property="specialpurpose.present"/>
@@ -171,34 +168,18 @@ under the License.
     <!-- ================================================================== -->
 
     <target name="gwt" depends="gwt-code"/>
-
+	
     <target name="gwt-code">
-        <echo message="[gwt code] ========== Start Building GWT Code (Compile) =========="/>
-        <subant inheritall="false" target="gwt-code">
-            <filelist dir="." files="opentaps/build.xml"/>
-        </subant>
-        <subant inheritall="false" target="gwt-code">
-            <fileset dir="${basedir}/hot-deploy" casesensitive="no">
-                <include name="**/build.xml"/>
-            </fileset>
-        </subant>
-        <echo message="[gwt code] ========== Done Building GWT Code (Compile) =========="/>
-    </target>
+      <subant target="gwt-code">
+          <filelist dir="." files="opentaps-build.xml"/>
+      </subant>
+    </target>	
 
-    <target name="gwt-labels" depends="prebuild"
-            description="Generate the GWT labels.">
-        <echo message="[gwt-labels] ========== Start Building GWT Labels (Compile) =========="/>
-        <delete verbose="on">
-            <fileset dir="./opentaps/opentaps-common/src/common/org/opentaps/gwt/common/client/messages/" includes="CommonMessages*.*"/>
-        </delete>
-        <java jar="ofbiz.jar" fork="true">
-            <jvmarg value="${memory.max.param}"/>
-            <jvmarg value="${permmemory.max.param}"/>
-            <arg value="gwtlabels"/>
-        </java>
-        <echo message="[gwt-labels] ========== Done Building GWT Labels (Compile) =========="/>
-    </target>
-
+    <target name="gwt-labels" depends="prebuild">
+      <subant target="gwt-labels">
+          <filelist dir="." files="opentaps-build.xml"/>
+      </subant>
+    </target>   
 
     <!-- ================================================================== -->
     <!-- Build Components                                                   -->
@@ -497,6 +478,17 @@ under the License.
             <arg value="failonerror"/>
         </java>
     </target>
+    <target name="run-install-noext" depends="refresh-hibernatecfg,server"
+        description="This loads all configured data but does not load the ext files in opentaps/mycompany ">
+        <java jar="ofbiz.jar" fork="true" failonerror="true">
+            <jvmarg value="${memory.initial.param}"/>
+            <jvmarg value="${memory.max.param}"/>
+            <jvmarg value="${permmemory.max.param}"/>
+            <arg value="install"/>
+        	<arg value="readers=seed,seed-initial,demo"/>
+            <arg value="failonerror"/>
+        </java>
+    </target>	
     <target name="run-install-seed" depends="refresh-hibernatecfg,server"
         description="This loads ONLY the seed data (not seed-initial, demo, ext* or anything else); meant for use after an update of the code to reload the seed data as it is generally maintained along with the code and needs to be in sync for operation">
         <java jar="ofbiz.jar" fork="true" failonerror="true">
@@ -757,56 +749,23 @@ under the License.
         </echo>
     </target>
 
-    <target name="make-constants" depends="prebuild"
-            description="Generate the constants from the database.">
-        <mkdir dir="./opentaps/opentaps-common/src/constants/org/opentaps/base/constants/"/>
-        <delete verbose="on">
-            <fileset dir="./opentaps/opentaps-common/src/constants/org/opentaps/base/constants/" includes="**/*.java"/>
-        </delete>
-        <java jar="ofbiz.jar" fork="true">
-            <jvmarg value="${memory.max.param}"/>
-            <jvmarg value="${permmemory.max.param}"/>
-            <arg value="constantsgeneration"/>
-        </java>
-    </target>
-    <target name="make-base-entities" depends="prebuild"
-            description="Generate the POJO base entities from the entity and service model.">
-        <mkdir dir="./opentaps/opentaps-common/src/base/org/opentaps/base/entities/"/>
-        <mkdir dir="./opentaps/opentaps-common/src/entities/org/opentaps/base/entities/"/>
-        <mkdir dir="./opentaps/opentaps-common/src/services/org/opentaps/base/services/"/>
-        <delete verbose="on">
-            <fileset dir="./opentaps/opentaps-common/src/base/org/opentaps/base/entities/" includes="**/*.java"/>
-            <fileset dir="./opentaps/opentaps-common/src/entities/org/opentaps/base/entities/" includes="**/*.java"/>
-            <fileset dir="./opentaps/opentaps-common/src/services/org/opentaps/base/services/" includes="**/*.java"/>
-        </delete>
-        <java jar="ofbiz.jar" fork="true">
-            <jvmarg value="${memory.max.param}"/>
-            <jvmarg value="${permmemory.max.param}"/>
-            <arg value="pojoentities"/>
-        </java>
-        <subant target="entities-jar">
-            <filelist dir="." files="./opentaps/opentaps-common/build.xml"/>
-        </subant>
-        <subant target="services-jar">
-            <filelist dir="." files="./opentaps/opentaps-common/build.xml"/>
-        </subant>
-        <delete verbose="off">
-            <fileset dir="./opentaps/opentaps-common/src/entities/org/opentaps/base/entities/" includes="**/*.java"/>
-            <fileset dir="./opentaps/opentaps-common/src/services/org/opentaps/base/services/" includes="**/*.java"/>
-            <fileset dir="./opentaps/opentaps-common/build/classes/entities/" includes="**/*.class"/>
-            <fileset dir="./opentaps/opentaps-common/build/classes/services/" includes="**/*.class"/>
-        </delete>    	
-    </target>
+    <target name="make-constants" depends="prebuild">
+      <subant target="make-constants">
+          <filelist dir="." files="opentaps-build.xml"/>
+      </subant>
+    </target> 
+
+    <target name="make-base-entities" depends="prebuild">
+      <subant target="make-base-entities">
+          <filelist dir="." files="opentaps-build.xml"/>
+      </subant>
+    </target> 
+
     <target name="refresh-hibernatecfg" depends="prebuild">
-        <delete verbose="on">
-            <fileset dir="./opentaps/opentaps-common/config/" includes="*.cfg.xml" excludes="hibernate.cfg.xml"/>
-        </delete>
-        <java jar="ofbiz.jar" fork="true">
-            <jvmarg value="${memory.max.param}"/>
-            <jvmarg value="${permmemory.max.param}"/>
-            <arg value="hibernatecfg"/>
-        </java>
-    </target>
+      <subant target="refresh-hibernatecfg">
+          <filelist dir="." files="opentaps-build.xml"/>
+      </subant>
+    </target> 
 
     <!-- ================================================================== -->
     <!-- Configuration deployment                                           -->
